src/objects/sma__MAArcGISBatchPushLog__c.object
<CustomObject>
    <fields>
        <fullName>sma__Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RecordID__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>MapAnything ArcGIS Batch Push Log</label>
    <nameField>
        <label>MapAnything ArcGIS Batch Push Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything ArcGIS Batch Push Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>